--- a/Resources/MainWindow_ipad.xib
+++ b/Resources/MainWindow_ipad.xib
@@ -120,7 +120,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 				</object>
 			</object>
-			<object class="IBUISplitViewController" id="20258457">
+			<object class="IBUISplitViewController" id="962341912">
 				<reference key="IBUIToolbarItems" ref="0"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
 					<int key="IBUIStatusBarStyle">2</int>
@@ -130,8 +130,8 @@
 				</object>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				<bool key="IBUIHorizontal">YES</bool>
-				<object class="IBUINavigationController" key="IBUIMasterViewController" id="905162520">
-					<reference key="IBUIParentViewController" ref="20258457"/>
+				<object class="IBUINavigationController" key="IBUIMasterViewController" id="739793103">
+					<reference key="IBUIParentViewController" ref="962341912"/>
 					<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics">
 						<int key="IBUIStatusBarStyle">2</int>
 					</object>
@@ -140,7 +140,7 @@
 					</object>
 					<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					<bool key="IBUIHorizontal">NO</bool>
-					<object class="IBUINavigationBar" key="IBUINavigationBar" id="336595199">
+					<object class="IBUINavigationBar" key="IBUINavigationBar" id="840080682">
 						<nil key="NSNextResponder"/>
 						<int key="NSvFlags">256</int>
 						<string key="NSFrameSize">{0, 0}</string>
@@ -152,9 +152,9 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 					</object>
 				</object>
-				<object class="IBUIViewController" key="IBUIDetailViewController" id="672881542">
+				<object class="IBUIViewController" key="IBUIDetailViewController" id="717532520">
 					<reference key="IBUIToolbarItems" ref="0"/>
-					<reference key="IBUIParentViewController" ref="20258457"/>
+					<reference key="IBUIParentViewController" ref="962341912"/>
 					<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 						<int key="interfaceOrientation">1</int>
 					</object>
@@ -208,17 +208,9 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">spliView</string>
-						<reference key="source" ref="987256611"/>
-						<reference key="destination" ref="20258457"/>
-					</object>
-					<int key="connectionID">152</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">leftNav</string>
 						<reference key="source" ref="987256611"/>
-						<reference key="destination" ref="905162520"/>
+						<reference key="destination" ref="739793103"/>
 					</object>
 					<int key="connectionID">157</int>
 				</object>
@@ -226,7 +218,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">navigationController</string>
 						<reference key="source" ref="987256611"/>
-						<reference key="destination" ref="672881542"/>
+						<reference key="destination" ref="717532520"/>
 					</object>
 					<int key="connectionID">158</int>
 				</object>
@@ -234,7 +226,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">rightNav</string>
 						<reference key="source" ref="987256611"/>
-						<reference key="destination" ref="672881542"/>
+						<reference key="destination" ref="717532520"/>
 					</object>
 					<int key="connectionID">159</int>
 				</object>
@@ -313,32 +305,32 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">146</int>
-						<reference key="object" ref="20258457"/>
+						<reference key="object" ref="962341912"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="905162520"/>
-							<reference ref="672881542"/>
+							<reference ref="739793103"/>
+							<reference ref="717532520"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">147</int>
-						<reference key="object" ref="905162520"/>
+						<reference key="object" ref="739793103"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="336595199"/>
+							<reference ref="840080682"/>
 						</object>
-						<reference key="parent" ref="20258457"/>
+						<reference key="parent" ref="962341912"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">148</int>
-						<reference key="object" ref="672881542"/>
-						<reference key="parent" ref="20258457"/>
+						<reference key="object" ref="717532520"/>
+						<reference key="parent" ref="962341912"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">150</int>
-						<reference key="object" ref="336595199"/>
-						<reference key="parent" ref="905162520"/>
+						<reference key="object" ref="840080682"/>
+						<reference key="parent" ref="739793103"/>
 					</object>
 				</object>
 			</object>
@@ -522,16 +514,19 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">PullToRefreshTableViewController</string>
-					<string key="superclassName">UITableViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/PullToRefreshTableViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">ReviewsControllerPad</string>
-					<string key="superclassName">PullToRefreshTableViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">tableView</string>
+						<string key="NS.object.0">UITableView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">tableView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">tableView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/ReviewsControllerPad.h</string>
@@ -791,6 +786,14 @@
 					<reference key="sourceIdentifier" ref="278441422"/>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">UIScrollView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UIScrollView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">UISearchBar</string>
 					<string key="superclassName">UIView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -809,17 +812,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">UISplitViewController</string>
 					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="448014583">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="401027308">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">UIKit.framework/Headers/UISplitViewController.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">UITableViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="className">UITableView</string>
+					<string key="superclassName">UIScrollView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
-						<string key="minorKey">UIKit.framework/Headers/UITableViewController.h</string>
+						<string key="minorKey">UIKit.framework/Headers/UITableView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -857,7 +860,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UIViewController</string>
-					<reference key="sourceIdentifier" ref="448014583"/>
+					<reference key="sourceIdentifier" ref="401027308"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UIViewController</string>
